# remaining-time-meter

./: .gitignore  LICENSE  README.md  TODO.md  package-lock.json  package.json  requirement.md  standalone.go
.github/workflows/: build-standalone.yml  build-tauri.yml  build-wpf.yml  build.yml  ci.yml
docs/: BUILD_INSTRUCTIONS.md  README-improved.md  README.md
docs/api/: api-reference.md
docs/development/: setup-guide.md
docs/specifications/: functional-requirements.md  (+5 more)
electron/: package-lock.json  package.json
fyne-app/: go.mod  main.go
native-windows/: go.mod  main.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tauri-timer/: package-lock.json  package.json
tests/: RemainingTimeMeter.Tests.csproj
wpf/: .editorconfig  App.xaml  App.xaml.cs  Constants.cs  INTERNATIONALIZATION.md  Logger.cs  Logger.cs.bak  MainWindow.xaml  MainWindow.xaml.cs  Makefile  RemMeter.csproj  RemainingTimeMeter.csproj  TimerWindow.xaml  TimerWindow.xaml.cs  package-lock.json  stylecop.json
wpf-progressbar-timerkeeper/: App.xaml  App.xaml.cs  Constants.cs  Logger.cs  MainWindow.xaml  MainWindow.xaml.cs  Makefile  ProgressBarTimerKeeper.csproj  README.md  TimerWindow.xaml  TimerWindow.xaml.cs  stylecop.json
wpf-seekbar-timer/: .editorconfig  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  TimerWindow.xaml  TimerWindow.xaml.cs
wpf-timer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SeekbarTimer.csproj  TimeSetDialog.xaml  TimeSetDialog.xaml.cs  app.manifest
(+30 files in other folders)
