[package]
name = "seekbar-timer"
version = "0.1.0"
description = "シークバー的タイムキーパー"
authors = ["Yosuke"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "window-maximize", "window-hide", "window-unminimize", "window-start-dragging", "window-show", "window-unmaximize", "window-close", "window-minimize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
